User store crud with example for swagger
