# app/Models/User.php
@@ -11,12 +11,13 @@ use Laravel\Sanctum\HasApiTokens;
 /**
  * @OA\Schema(
  *     schema="User",
- *     required={"id", "name", "email"},
- *     @OA\Property(property="id", type="integer", example=1),
- *     @OA\Property(property="name", type="string", example="John Doe"),
- *     @OA\Property(property="email", type="string", format="email", example="user@example.com"),
- *     @OA\Property(property="created_at", type="string", format="date-time"),
- *     @OA\Property(property="updated_at", type="string", format="date-time")
+ *     required={"id", "name", "email", "password"},
+ *     @OA\Property(property="id", type="integer", example="3"),
+ *     @OA\Property(property="name", type="string", example="user1"),
+ *     @OA\Property(property="email", type="string", format="email", example="user1@example.com"),
+ *     @OA\Property(property="created_at", type="string", format="date-time", example="2025-03-11 20:40:54"),
+ *     @OA\Property(property="updated_at", type="string", format="date-time", example="2025-03-11 20:40:54"),
+ *     @OA\Property(property="image", type="string", example="/users/images/user1.jpg")
  * )
  */
 class User extends Authenticatable
@@ -32,6 +33,7 @@ class User extends Authenticatable
         'name',
         'email',
         'password',
+        'image',
     ];
 
     /**
